--- a/SF-Python/Flask-SQLAlchemy-Demo/index.html
+++ b/SF-Python/Flask-SQLAlchemy-Demo/index.html
@@ -11,6 +11,7 @@
 
 
 <title>SQLAlchemy-Demo-YoutubeData slides</title>
+<strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
