Update indexes with back to site reference

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 
-<title>index slides</title>
+<title>Introduction</title>
+
+<strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13242,15 +13245,28 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Presentations">Presentations<a class="anchor-link" href="#Presentations">&#182;</a></h1><p><img src="Resources/PresentationGif-Raul.gif" alt="Presentation GIF"></p>
+<h1 id="Presentations">Presentations<a class="anchor-link" href="#Presentations">&#182;</a></h1><p><img src="Resources/PresentationGif-Raul.gif" alt="Presentation" height="80" width="80"></p>
+<h2 id="Introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><p>This repository is a compilation of all documents and resources for talks I have spoken at in San Francisco, Ca.</p>
 
 </div>
 </div>
-</div>
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><p>This repository is a compilation of all documents and resources for talks I have spoken at in San Francisco, Ca.</p>
+<h2 id="Table-of-Contents">Table of Contents<a class="anchor-link" href="#Table-of-Contents">&#182;</a></h2><p>Lightning-Talk-ProtosAndJSON</p>
+<ol>
+<li><p><a href="PyData-LA/AB-Testing-Python">PyData LA 2019: AB Testing</a></p>
+</li>
+<li><p><a href="PyBayTalks/2019/AB-Testing-Python">PyBay 2019: AB Testing</a></p>
+</li>
+<li><p><a href="SF-Python/Flask-SQLAlchemy-Demo/">Flask and SQLAlchemy Demonstration</a></p>
+</li>
+<li><p><a href="PyBayTalks/2018/Lightning-Talk-ProtosAndJSON">Proto Buffs VS JSON structures</a></p>
+</li>
+<li><p><a href="SF-Python/TakesTwoToDatclean/">Takes Two to Data Clean</a></p>
+</li>
+</ol>
 
 </div>
 </div>
@@ -13270,21 +13286,6 @@ a.anchor-link {
 </li>
 <li><p>Takes Two to Data Clean</p>
 <p>a. <a href="https://www.youtube.com/watch?v=OjT7mT5Ydw0&amp;t=11s">Video</a></p>
-</li>
-</ol>
-
-</div>
-</div>
-</div></section><section>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Table-of-Contents">Table of Contents<a class="anchor-link" href="#Table-of-Contents">&#182;</a></h2><ol>
-<li><p><a href="Flask-SQLAlchemy-Demo/">Flask and SQLAlchemy Demonstration</a></p>
-</li>
-<li><p><a href="PyBayTalks/ProtosAndJSON/">Proto Buffs VS JSON structures</a></p>
-</li>
-<li><p><a href="TakesTwoToDatclean/">Takes Two to Data Clean</a></p>
 </li>
 </ol>
 
