Add homepage reference

--- a/PyData-LA/AB-Testing-Python/index.html
+++ b/PyData-LA/AB-Testing-Python/index.html
@@ -10,7 +10,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 
-<title>1-ABTesting-Presentation-2019-Solutions slides</title>
+<title> AB Testing Presentation</title>
+<strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13244,7 +13246,6 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="1.0-The-Overview">1.0 The Overview<a class="anchor-link" href="#1.0-The-Overview">&#182;</a></h1>
 </div>
-<strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
 
 </div>
 </div><div class="fragment">
