--- a/BayPiggies/Survival-Analysis/index.html
+++ b/BayPiggies/Survival-Analysis/index.html
@@ -13349,7 +13349,7 @@ I am not a core-contributor to the Lifelines project</p>
 
 </div>
 </div>
-</div>
+</div></div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13364,18 +13364,11 @@ I am not a core-contributor to the Lifelines project</p>
 <h2 id="--What-are-those-special-properties?"><center>  What are those special properties?</center><a class="anchor-link" href="#--What-are-those-special-properties?">&#182;</a></h2>
 </div>
 </div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="--Censoring"><center>  Censoring</center><a class="anchor-link" href="#--Censoring">&#182;</a></h2>
-</div>
-</div>
 </div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
+<h2 id="--Censoring"><center>  Censoring</center><a class="anchor-link" href="#--Censoring">&#182;</a></h2><ul>
 <li><p>If we look at the following image, we observe one case where people have not experiences some occurence, and continue to persist. ff we take the mean of these data points, we are underestimate the average because those who continue to stay alive after time t, skew our average.</p>
 </li>
 <li><p>If we measure average lifespan of sample at some time t, then we cannot identify what the true lifespan is for all individals</p>
@@ -13386,22 +13379,15 @@ I am not a core-contributor to the Lifelines project</p>
 
 </div>
 </div>
-</div>
+</div></div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="--Regression-"><center>  Regression </center><a class="anchor-link" href="#--Regression-">&#182;</a></h2>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Because of the censoring component, we implement a different type of regression in comparison to something like Logistic Regression</p>
+<h2 id="--Regression-"><center>  Regression </center><a class="anchor-link" href="#--Regression-">&#182;</a></h2><p>Because of the censoring component, we implement a different type of regression in comparison to something like Logistic Regression</p>
 
 </div>
 </div>
-</div></div><div class="fragment">
+</div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14073,67 +14059,24 @@ $$S(t) = \text{Pr}(T&gt;t) = 1-F(t)$$<p>where $T$ is the response variable, wher
 </div>
 </div>
 
-</div>
+</div></div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="How-is-this-different-from-logistic-regression?">How is this different from logistic regression?<a class="anchor-link" href="#How-is-this-different-from-logistic-regression?">&#182;</a></h3><p>We are interested in how risk factors were associated with presence or absence of disease in regression. However, what happens if a study drops out? Also, what if we are interested in how a risk factor or treatment affects time to event of interest?</p>
+<h3 id="What-about-Regression?">What about Regression?<a class="anchor-link" href="#What-about-Regression?">&#182;</a></h3><h3 id="How-is-this-type-of-Regression-different-from-Linear-or-Logistic-Regression?">How is this type of Regression different from Linear or Logistic Regression?<a class="anchor-link" href="#How-is-this-type-of-Regression-different-from-Linear-or-Logistic-Regression?">&#182;</a></h3><p>We are interested in how risk factors were associated with presence or absence of disease in regression. However, what happens if a study drops out? Also, what if we are interested in how a risk factor or treatment affects time to event of interest?</p>
 <p>Logistic Regression is not ideal for that.</p>
 
 </div>
 </div>
-</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Hazard-Function">Hazard Function<a class="anchor-link" href="#Hazard-Function">&#182;</a></h3><p>The hazard function $h(t)$, is the instantaneous rate at which events occur, given no previous events.</p>
-<p>$h(t) = \lim_{\Delta t \rightarrow 0} \tfrac{Pr(t &lt; T \leq t + \Delta{t} | T&gt;t)}{\Delta t}$ $=\tfrac{f(t)}{S(t)}$</p>
+<h2 id="-Thank-you,-"><center> Thank you, </center><a class="anchor-link" href="#-Thank-you,-">&#182;</a></h2><p><img src="resources/images/BayPiggies.png" alt="BayPiggies" class="right"></p>
 
 </div>
 </div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>The cumulative hazard describes the accumulated risk up to time t, $H(t) = \int^{t}_{0} h(u) du$</p>
-<blockquote><p>A more constructive proof of the hazard function can be found <a href="http://people.stat.sfu.ca/~raltman/stat402/402L32.pdf">here (via SFU)</a></p>
-</blockquote>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">github</span><span class="o">.</span><span class="n">com</span><span class="o">/</span><span class="n">CamDavidsonPilon</span><span class="o">/</span><span class="n">lifelines</span><span class="o">/</span><span class="n">blob</span><span class="o">/</span><span class="n">master</span><span class="o">/</span><span class="n">examples</span><span class="o">/</span><span class="n">Customer</span><span class="o">%</span><span class="k">20Churn</span>.ipynb
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">datasource</span> <span class="kn">from</span> <span class="nn">this</span> <span class="n">example</span> <span class="n">notebook</span>
-<span class="o">&gt;</span> <span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">github</span><span class="o">.</span><span class="n">com</span><span class="o">/</span><span class="n">CamDavidsonPilon</span><span class="o">/</span><span class="n">lifelines</span><span class="o">/</span><span class="n">blob</span><span class="o">/</span><span class="n">master</span><span class="o">/</span><span class="n">examples</span><span class="o">/</span><span class="n">Customer</span><span class="o">%</span><span class="k">20Churn</span>.ipynb
-    
-    
-<span class="n">Note</span><span class="p">:</span>
-<span class="o">*</span> <span class="n">There</span> <span class="ow">is</span> <span class="n">an</span> <span class="n">R</span> <span class="n">implementation</span> <span class="n">called</span> <span class="p">[</span><span class="n">Survival</span><span class="p">](</span><span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">www</span><span class="o">.</span><span class="n">emilyzabor</span><span class="o">.</span><span class="n">com</span><span class="o">/</span><span class="n">tutorials</span><span class="o">/</span><span class="n">survival_analysis_in_r_tutorial</span><span class="o">.</span><span class="n">html</span><span class="p">)</span>
-<span class="o">*</span> <span class="n">There</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">Sci</span><span class="o">-</span><span class="n">kit</span> <span class="n">Learn</span> <span class="n">equivalent</span> <span class="n">called</span> <span class="p">[</span><span class="n">Scikit</span><span class="o">-</span><span class="n">Survival</span><span class="p">](</span><span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">readthedocs</span><span class="o">.</span><span class="n">org</span><span class="o">/</span><span class="n">projects</span><span class="o">/</span><span class="n">scikit</span><span class="o">-</span><span class="n">survival</span><span class="o">/</span><span class="p">)</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-</div></div></section></section>
+</div></section></section>
 </div>
 </div>
 
