Update directory path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 
-<title>Introduction</title>
+<title>Presentations</title>
 
 <strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
 
@@ -13245,8 +13245,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Presentations">Presentations<a class="anchor-link" href="#Presentations">&#182;</a></h1><p><img src="Resources/PresentationGif-Raul.gif" alt="Presentation" height="80" width="80"></p>
-<h2 id="Introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><p>This repository is a compilation of all documents and resources for talks I have spoken at in San Francisco, Ca.</p>
+<h1 id="-Presentations-"><center> Presentations </center><a class="anchor-link" href="#-Presentations-">&#182;</a></h1><p><img src="Resources/PresentationGif-Raul.gif" alt="Presentation" height="400" width="400"></p>
+<p>The following are a list of presentation slide decks &amp; videos I have done in the past.</p>
 
 </div>
 </div>
@@ -13254,40 +13254,42 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Table-of-Contents">Table of Contents<a class="anchor-link" href="#Table-of-Contents">&#182;</a></h2><p>Lightning-Talk-ProtosAndJSON</p>
-<ol>
-<li><p><a href="PyData-LA/AB-Testing-Python">PyData LA 2019: AB Testing</a></p>
+<h2 id="Slide-decks">Slide decks<a class="anchor-link" href="#Slide-decks">&#182;</a></h2><h3 id="2020">2020<a class="anchor-link" href="#2020">&#182;</a></h3><ul>
+<li><a href="https://raulingaverage.dev/Presentations/BayPiggies/Survival-Analysis/#/">BayPiggies 2020: Survival Analysis w/Lifelines</a></li>
+</ul>
+<h3 id="2019">2019<a class="anchor-link" href="#2019">&#182;</a></h3><ul>
+<li><p><a href="PyData-LA/AB-Testing-Python">PyData LA 2019: AB Testing in Python</a></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=r6Z8FyCJ1g8">Video</a></li>
+</ul>
 </li>
-<li><p><a href="PyBayTalks/2019/AB-Testing-Python">PyBay 2019: AB Testing</a></p>
+<li><p><a href="PyBayTalks/2019/AB-Testing-Python">PyBay 2019: AB Testing in Python</a></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=QWeMYnlNtzY">Video</a></li>
+</ul>
 </li>
-<li><p><a href="SF-Python/Flask-SQLAlchemy-Demo/">Flask and SQLAlchemy Demonstration</a></p>
-</li>
-<li><p><a href="PyBayTalks/2018/Lightning-Talk-ProtosAndJSON">Proto Buffs VS JSON structures</a></p>
-</li>
-<li><p><a href="SF-Python/TakesTwoToDatclean/">Takes Two to Data Clean</a></p>
-</li>
-</ol>
+</ul>
 
 </div>
 </div>
-</div>
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Videos-&amp;-Decks">Videos &amp; Decks<a class="anchor-link" href="#Videos-&amp;-Decks">&#182;</a></h2><ol>
-<li><p>Flask and SQLAlchemy Demo</p>
+<h3 id="2018">2018<a class="anchor-link" href="#2018">&#182;</a></h3><ul>
+<li><p><a href="SF-Python/Flask-SQLAlchemy-Demo/">PyBay 2018: Flask and SQLAlchemy Demonstration Lightning Talk</a></p>
 <ul>
-<li>a. <a href="https://docs.google.com/presentation/d/118XmBmommV-THg-2MU-qW3dUP9sKKxbKeLjHK5B2Dnw/edit">Slide Deck</a></li>
-<li>b. <a href="https://youtu.be/XUsx9odu94Y?t=372">Video</a></li>
+<li><a href="https://youtu.be/XUsx9odu94Y?t=372">Video</a></li>
 </ul>
 </li>
-<li><p>Protos VS JSON</p>
-<p>a. <a href="https://github.com/CloudChaoszero/Presentations/blob/master/PyBayTalks/ProtosAndJSON/Protocol-JSON-AndMore%20(1">Slide Deck</a>.pptx)</p>
+<li><p><a href="PyBayTalks/2018/Lightning-Talk-ProtosAndJSON">PyBay 2018: Proto Buffs VS JSON structures Lightning Talk</a></p>
 </li>
-<li><p>Takes Two to Data Clean</p>
-<p>a. <a href="https://www.youtube.com/watch?v=OjT7mT5Ydw0&amp;t=11s">Video</a></p>
+<li><p><a href="SF-Python/TakesTwoToDatclean/">SF Python 2018: Takes Two to Data Clean Lightning Talk</a></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=OjT7mT5Ydw0&amp;t=11s">Video</a></li>
+</ul>
 </li>
-</ol>
+</ul>
 
 </div>
 </div>
