Add embedded tweet and minor grammar fixes

--- a/BayPiggies/Survival-Analysis/index.html
+++ b/BayPiggies/Survival-Analysis/index.html
@@ -13260,8 +13260,7 @@ a.anchor-link {
 <ul>
 <li>Data Analyst @ Autodesk</li>
 <li>You can find me at <a href="http://raulingaverage.dev/">RaulingAverage.dev</a></li>
-<li>Enjoy Coffee, Learning, and Running..near the beach
-As we are aware</li>
+<li>Enjoy Coffee, Learning, and Running..near the beach</li>
 </ul>
 
 </div>
@@ -13564,15 +13563,22 @@ As we are aware</li>
 
 </div>
 </div>
-</div><div class="fragment">
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="resources/images/Survival-Curve-1st-Example.png" alt="Survival Curve Example" class="center"></p>
+<center>  Another recent example...</center>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Look at Table 5. First it&#39;s amazing to see a paper w/ &gt;1,100 vented <a href="https://twitter.com/hashtag/Covid19?src=hash&amp;ref_src=twsrc%5Etfw">#Covid19</a> pts. But of these 1151 vented pts, *at a median follow-up time of 4.5d* only 38 went home, 282 died, while 831 were still hospitalized. 282/(38+282) = 88% mortality. But thats *quite* misleading👇(4/x) <a href="https://t.co/za3S6qEBFj">pic.twitter.com/za3S6qEBFj</a></p>&mdash; John W Scott, MD MPH (@DrJohnScott) <a href="https://twitter.com/DrJohnScott/status/1253284903602528256?ref_src=twsrc%5Etfw">April 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 
 </div>
 </div>
-</div></div></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13584,7 +13590,7 @@ As we are aware</li>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="--Censoring"><center>  Censoring</center><a class="anchor-link" href="#--Censoring">&#182;</a></h2><ul>
-<li><p>If we look at the following image, we observe one case where people have not experiences some occurence, and continue to persist. ff we take the mean of these data points, we are underestimate the average because those who continue to stay alive after time t, skew our average.</p>
+<li><p>If we look at the following image, we observe one case where people have not experiences some occurence, and continue to persist. If we take the mean of these data points, we are underestimate the average because those who continue to stay alive after time t, skew our average.</p>
 </li>
 <li><p>And if we only consider one segmentation of individuals, say those who had their event of occurence happen, we too still underestimate our average of the values.</p>
 </li>
