Add embedded tweet and minor grammar fixes

--- a/BayPiggies/Survival-Analysis/index.html
+++ b/BayPiggies/Survival-Analysis/index.html
@@ -13560,6 +13560,7 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Because of the start and end date of these customer, we can observe these customer's life expectancies (or their churn) over time <strong>t</strong>, seen below:</p>
 <p>Moreover, there are nice properties of this implementation we can utilize to ensure we have an accurate depiction of observing the event of interest, in our case churn, over time.</p>
+<p><img src="resources/images/Survival-Curve-1st-Example.png" alt="Survival Curve Example" class="center"></p>
 
 </div>
 </div>
