--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 
-<title>Presentations</title>
+<title>index slides</title>
 
 <strong>Back to the website:</strong> <a href="https://cloudchaoszero.github.io/">https://cloudchaoszero.github.io/</a>
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13255,7 +13254,10 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Slide-decks">Slide decks<a class="anchor-link" href="#Slide-decks">&#182;</a></h2><h3 id="2020">2020<a class="anchor-link" href="#2020">&#182;</a></h3><ul>
-<li><a href="https://raulingaverage.dev/Presentations/BayPiggies/Survival-Analysis/#/">BayPiggies 2020: Survival Analysis w/Lifelines</a></li>
+<li><p><a href="https://raulingaverage.dev/Presentations/SF-Python/Prefect-Overview">SF Python 2020: A Primer on Prefect</a></p>
+</li>
+<li><p><a href="https://raulingaverage.dev/Presentations/BayPiggies/Survival-Analysis/#/">BayPiggies 2020: Survival Analysis w/Lifelines</a></p>
+</li>
 </ul>
 <h3 id="2019">2019<a class="anchor-link" href="#2019">&#182;</a></h3><ul>
 <li><p><a href="PyData-LA/AB-Testing-Python">PyData LA 2019: AB Testing in Python</a></p>
