:art: Add Aug2020 bulletin

--- a/index.html
+++ b/index.html
@@ -13255,6 +13255,8 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Slide-decks">Slide decks<a class="anchor-link" href="#Slide-decks">&#182;</a></h2><h3 id="2020">2020<a class="anchor-link" href="#2020">&#182;</a></h3><ul>
 
+<li><p><a href="https://raulingaverage.dev/Presentations/Other/2020/SQL-Readability">SQL Readability (Virtual @Autodesk)</a></p>
+</li>
 <li><p><a href="https://raulingaverage.dev/Presentations/PyBayTalks/2020/Survival-Analysis-Lifelines/Survival-Analysis">PyBay 2020 (Virtual): Surviving the Analysis, with Lifelines</a></p>
 </li>
 <li><p><a href="https://raulingaverage.dev/Presentations/PyBayTalks/2020/dbt/Lighting-Talk-dbt">PyBay 2020 (Virtual): Lightning Talk - dbt</a></p>
