:art: Add link, embedded tweet, transition

--- a/SF-Python/Analytics-Engineering-with-dbt/index.html
+++ b/SF-Python/Analytics-Engineering-with-dbt/index.html
@@ -13588,22 +13588,6 @@ SQL Assertions or other SQL-related testing</p>
 <li>Alerting</li>
 </ul>
 </blockquote>
-
-<pre><code>yml
--- mart_schema.yml
-version: 2
-
-models:
-  - name: some_table_name
-    columns:
-      - name: order_id
-        tests:
-          - unique
-          - not_null
-      - name: status
-        tests:
-          - accepted_values:
-              values: ['placed', 'shipped', 'completed', 'returned']</code></pre>
 <p>And more!</p>
 
 </div>
@@ -13624,9 +13608,9 @@ models:
 <li>Check out the Fishtown Analytics <a href="https://docs.getdbt.com/">dbt Documentation</a></li>
 <li><a href="https://www.getdbt.com/coalesce">dbt's Coalesce 2020 conference</a>, December 2020.</li>
 <li>dbt has an awesome <a href="https://community.getdbt.com/">Slack community</a> - community.getdbt.com</li>
-<li>My own tutorial on starting dbt--<a href="https://raulingaverage.dev/onboarding-2-dbt/">Analytic Engineering &amp; dbt: 0-100¶
-t</a></li>
+<li>My own tutorial on starting dbt--<a href="https://raulingaverage.dev/onboarding-2-dbt/">Analytic Engineering &amp; dbt: 0-100</a></li>
 </ul>
+<p><blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://t.co/2pBx8FCRsj">pic.twitter.com/2pBx8FCRsj</a></p>&mdash; dbt (@getdbt) <a href="https://twitter.com/getdbt/status/1303410186036613122?ref_src=twsrc%5Etfw">September 8, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 
 </div>
 </div>
@@ -13638,7 +13622,7 @@ t</a></li>
 <ul>
 <li><a href="https://raulingaverage.dev/">RaulingAverage.dev</a></li>
 <li><a href="https://twitter.com/RaulingAverage">Twitter: @RaulingAverage</a></li>
-<li><a href="https://raulingaverage.dev/Presentations/#/0/1">Presentation Link</a></li>
+<li><a href="https://raulingaverage.dev/Presentations/SF-Python/Analytics-Engineering-with-dbt">Presentation: raulingaverage.dev/Presentations/SF-Python/Analytics-Engineering-with-dbt</a></li>
 </ul>
 
 </div>
