--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <title>index slides</title>
-<strong>Back to the homepage:</strong> <a href="https://raulingaverage.dev/Presentations">https://raulingaverage.dev/portfolio/presentations</a>
+<strong>Back to the homepage:</strong> <a href="https://raulingaverage.dev/portfolio/presentations">https://raulingaverage.dev/portfolio/presentations</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
